--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.1.0",
+    "axios": "^0.26.0",
+    "balm-ui": "^9.42.1",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "element-plus": "^2.0.2",
+    "element-ui": "^2.4.5",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "wave-ui": "^2.31.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,6 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-element": "~1.0.1"
   }
 }
