--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "primevue": "^3.12.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-spinner": "^1.0.4",
     "vuex": "^4.0.0-0",
     "wave-ui": "^2.31.0"
   },
